--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -2,8 +2,7 @@
 en:
   # my_label: "My label"
   :edit_redmine_properties_propagate: "Utilise le system de propagation"
-  #:copy_target_version_subtask: ""
-  #:task_status_ids: ""
+  :project_module_redmine_properties_propagate: "Properties Propagate"
   :label_setting_copy_target_version_subtask: "Copy the target version of the parent into subtasks"
   :label_setting_tracker_parent_task_ids: "Trackers that have the behavior"
   :label_setting_set_target_version_subtask: "Set the target version of the subtasks from parent"
